# stock-dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.toml
backend/: main.py
backend/services/: chart.py  stock.py
backend/static/: style.css
backend/templates/: base.html  index.html
backend/templates/partials/: cards.html
doc/: knowledge.md  requirements.md  tasks.md
