[project]
name = "stock-dashboard"
version = "0.1.0"
description = "S&P500 and FANG+ index price dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "yfinance>=0.2.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]
